--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ google_ad_slot           :
 # Site Author
 author:
   name             : "史元君 (Tim)"
-  avatar           : "avatar.jpg"
+  avatar           : "avatar.PNG"
   bio              : "enjoy learning, enjoy Gym, a bit like to toss"
   location         : "Shanghai"
   email            : syj_news@163.com
